[package]
name = "devrunner"
version = "0.1.0"
edition = "2024"
description = "A terminal-based task runner for developers"
license = "MIT"
repository = "https://github.com/NyxTools/DevRunner"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tui-big-text = "0.7.3"
walkdir = "2.5.0"
